W-15884079: Improve encapsulation of the Embedded Runtime (#13611) (#13632)
(cherry picked from commit 857e01b1352e68c6bef814195ad03bf9d82aeda1)